--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ dependencies {
 
     // Use JUnit test framework
        testImplementation group: 'junit', name: 'junit', version: '4.+'
-}
+    //Use Restassured framework
+    testImplementation 'io.rest-assured:rest-assured:4.+'
 
-// Define the main class for the application
-mainClassName = 'App'
+
+
+}
